[workspace]
resolver = "3"
members = ["configurable-test-api", "configurable-load-generator", "shared"]

[workspace.dependencies]
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["env"] }
itertools = "0.14.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "parking_lot", "net", "sync", "time", "macros"] }
