[package]
name = "configurable-load-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
figment = { workspace = true }
futures = "0.3.31"
itertools = { workspace = true }
log = { workspace = true }
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "charset", "system-proxy"] }
serde = { workspace = true }
shared = { path = "../shared" }
thiserror = { workspace = true }
tokio = { workspace = true }
