[package]
name = "rs-lb-test"
version = "0.1.0"
edition = "2024"

[dependencies]
bb8 = "0.9.0"
dashmap = "6.1.0"
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["env"] }
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1"
httparse = "1.10.1"
hyper = { version = "1.7.0", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1.18.1", features = ["v4"] }
